# OBY-Chat

./: .gitignore  Dockerfile  Dockerfile.testdocs  Fonctionnement_run_full_indexing_pipeline.md  arborescence_oby_chat.txt  constantes_sante.db  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
assets/: style.css
assets/fonts/dejavu-fonts-ttf-2.37/ttf/: DejaVuSans.pkl
config/: config.py
docs/: architecture.md  deploiement.md  documentation_oby_ia.md  index.md  oby-ia_schema.puml  style_sheet_documentation.css
docs/codebase/: agent.md  overview.md  tools.md
docs/js/: init-mermaid.js
outputs/chat_exports/Deloin/2025-06-05/: export_chat_Deloin.md
outputs/chat_exports/Deloin/2025-06-13/: export_chat_Deloin.md
outputs/chat_exports/Deloin/2025-07-07/: export_chat_Deloin.md
outputs/chat_exports/Deloin/2025-07-11/: export_chat_Deloin.md
outputs/chat_exports/Deloin/2025-07-17/: export_chat_Deloin.md
scripts/: TODO.py  generate_overview.py  generate_overview_doc.py  generate_tree.py  start.sh
src/: __init__.py  app.py
src/api/: main_api.py  models.py
src/api/routes/: chat.py  export.py  login.py  logout.py  poa_patients.py  status.py
src/assets/: style.css
src/assets/fonts/dejavu-fonts-ttf-2.37/ttf/: DejaVuSans-Bold.pkl
src/data/: __init__.py  constant_generator.py  get_constants.py
src/data/input/fiches_documentaires_docx/: Fiche_RBPP_regroupees_de_000_a_104_clean.docx
src/data/input/poa_patients/: BARDOIN_BRIGITTE_14_18_2025.json  BARDOIN_BRIGITTE_23_09_2025.json  DELOIN_ALAIN_23_09_2025.json  DELOIN_ALAIN_24_04_2025.json  DIPOT_GERMAINE_14_18_2025.json  DIPOT_GERMAINE_23_09_2025.json  MAYET_BERTRAND_14_08_2025.json  MAYET_BERTRAND_23_09_2025.json  REALY_ISABELLE_14_18_2025.json  REALY_ISABELLE_23_09_2025.json  TARO_BERNADETTE_14_18_2025.json  TARO_BERNADETTE_23_09_2025.json
src/data/input/trusted_web_sites/: trusted_web_sites_list.py
src/data/output/indexation/: indexed_files.json
src/data/output/to_json_fiches_documentaires/: fiche_000.json  fiche_001.json  fiche_002.json
src/data/output/to_json_web_sites/: actualisation-des-recommandations-de-prise-en-charge-des-pneumonies-aigues-communautaires-chez-ladulte.json  chute-chez-la-personne-agee.json  degenerescence-maculaire-liee-a-lage.json  index.json
src/func/: __init__.py  anonymizer.py  api_core.py  auto_index_documents.py  detect_genre.py  detect_poa_file_path.py  extract_patient_name.py  extract_user_intent.py  free_text_name_anonymizer.py  generate_ppa_from_poa.py  generate_structured_medical_plan.py  get_chroma_stats.py  get_patient_constants_graphs.py  handle_user_requests.py  index_documents_chromadb.py  indexed_health_related_files.py  llm_prompts.py  poa_cleaning.py  poa_loader.py  retrieve_relevant_chunks.py  run_full_indexing_pipeline.py  scrape_trusted_sites.py  serialize_figs.py
src/llm_user_session/: __init__.py  model.py  session_manager.py  session_manager_instance.py
src/pages/: __init__.py  chatbot_ui.py  home.py
src/utils/: __init__.py  chroma_client.py  convert_fiches_docx_to_json.py  convert_json_text.py  export_chat_response.py  memlog.py  reset_data.py  scheduler.py  vector_db_utils.py
tmp/: diag_docx_only.py
