[project]
name = "python_oby_ia"
version = "0.1.2"
description = "Application IA pour la synthèse de santé et les plans d'accompagnement personnalisés."
authors = [{ name="Olivier de Beyssac", email="olivier.debeyssac@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "dash>=2.15.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "langchain>=0.1.14",
    "mistralai>=0.1.7",
    "fpdf2>=2.7.8",
    "reportlab>=4.0.4",
    "python-docx>=1.1.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.2",
    "matplotlib>=3.8.0",
    "pydantic>=2.6.0",
    "python-dotenv~=0.21.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "langchain-core~=0.3.63",
    "unidecode~=1.4.0",
    "beautifulsoup4~=4.13.4",
    "tiktoken~=0.9.0",
    "dash-core-components~=2.0.0",
    "dash-html-components~=2.0.0",
    "dash-table~=5.0.0",
    "tabulate~=0.9.0",
    "markdown~=3.8",
    "schedule~=1.2.2",
    "watchdog~=6.0.0",
    "langchain-openai~=0.3.18",
    "langchain-mistralai",
    "langchain-community>=0.0.30",
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocs-mermaid2-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    "mkdocs-glightbox",
    "plantuml-markdown",
    "fastapi==0.111.*",
    "uvicorn[standard]==0.30.*",
    "pydantic==2.8.*",
    "starlette==0.37.*",
    "pdfminer-six~=20250327",
    "python-dateutil~=2.9.0post0",
    "httpx~=0.28.1",
    "langchain>=0.2.10",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.7",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.6.1",
    "transformers>=4.41.0",
    "huggingface-hub>=0.23.0",
    "fasteners>=0.19"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<6",
]


[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

